--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,12 @@
 
             <header>
                 <nav>
-                    <img src="/image/WhatsApp Image -11-10 at 00.07.23.jpg"
-                        alt="Logo">
+                    <div>
+                        <a id="hom"
+                            href="/Index.html"><img src="/image/WhatsApp Image -11-10 at 00.07.23.jpg"
+                                alt="Logo"></a>
+
+                    </div>
 
                     <a href="">Deals</a>
                     <a href="">Support & Services</a>
@@ -34,7 +38,7 @@
                             alt=""
                             id="cart">
 
-                        <a href="/Sign-up.html">User</a>
+                        <a href="/Signin.html">User</a>
                     </div>
 
 
@@ -142,21 +146,22 @@
                             <hr>
                         </div>
                         <div class="t-2-b">
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4900/4900942_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
-                                <h4>Apple - AirPods Pro (1st generation) with Magsafe Charging...</h4>
+                                <h4>Apple - AirPods Pro (1st generation) with Magsafe ...</h4>
                                 <h5>Price:- $219.99</h5>
-                                <button id="best-btn">Add to Cart</button>
+                                <button
+                                    id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6448/6448758_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
-                                <h4>Insignia™ - 43" Class F30 Series LED 4K UHD Smart Fire TV With Android 10 ...</h4>
+                                <h4>Insignia™ - 43" Class F30 Series LED 4K UHD Smart Fire TV With ...</h4>
                                 <h5>Price:- $219.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6500/6500335_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
                                 <h4>Lenovo - Chromebook 3 11.6" HD Laptop - Celeron N4020 - 4GB...
@@ -164,36 +169,36 @@
                                 <h5>Price:- $139.00</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6472/6472653_rd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
-                                <h4>ZAGG - InvisibleShield Glass+ Defense Screen Protector for Apple...
+                                <h4>ZAGG - InvisibleShield Glass+ Defense Screen Protector for ...
                                 </h4>
                                 <h5>Price:- $24.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6361/6361905_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
                                 <h4>OtterBox - Commuter Series Case for Apple® iPhone® 11/XR - ...</h4>
                                 <h5>Price:- $36.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4907/4907100_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
                                 <h4>Apple - 10.9-Inch iPad Air - Latest Model - (5th Generation) with...</h4>
                                 <h5>Price:- $599.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6510/6510871_sd.jpg;maxHeight=240;maxWidth=240"
                                     alt="">
-                                <h4>Samsung - Galaxy Watch5 Pro Titanium Smartwatch 45mm LTE - Black</h4>
+                                <h4>Samsung - Galaxy Watch5 Pro Titanium Smartwatch 45mm LTE - ...</h4>
                                 <h5>Price:- $459.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6504/6504389_sd.jpg;maxHeight=150;maxWidth=225"
                                     alt="">
                                 <h4>Dell - Inspiron 2-in-1 16” FHD+ Touch Laptop – 12th Gen Intel Evo i5 – 8GB Memory –
@@ -201,28 +206,28 @@
                                 <h5>Price:- $749.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6398/6398209_sd.jpg;maxHeight=150;maxWidth=225"
                                     alt="">
-                                <h4>KitchenAid - Top Control Built-In Dishwasher with Stainless Steel Tu</h4>
+                                <h4>KitchenAid - Top Control Built-In Dishwasher with Stainless Steel Turbo</h4>
                                 <h5>Price:- $999.99</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6519/6519930_sd.jpg;maxHeight=150;maxWidth=225"
                                     alt="">
                                 <h4>Google - Pixel 7 Pro 128GB (Unlocked) - Snow (Made by Google)</h4>
                                 <h5>Price:- $899.00</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4901/4901905_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
                                 <h4>Apple - iPad mini (Latest Model) with Wi-Fi - 64GB - Purple (Made by Apple)</h4>
                                 <h5>Price:- $499.00</h5>
                                 <button id="best-btn">Add to Cart</button>
                             </div>
-                            <div>
+                            <div class="cart-prd">
                                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4901/4901816_sd.jpg;maxHeight=272;maxWidth=400"
                                     alt="">
                                 <h4>Apple - 10.2-Inch iPad with Wi-Fi - 256GB - Space Gray (Made by Apple)</h4>
@@ -549,5 +554,6 @@
             </div>
         </div>
     </body>
+    <script src="/index.js"></script>
 
 </html>
