Project Completed on Day-5

--- a/Login.html
+++ b/Login.html
@@ -20,7 +20,7 @@
                                 alt="Logo"></a>
 
                     </div>
-                    <a href="">Deals</a>
+                    <a href="/deals.html">Deals</a>
                     <a href="">Support & Services</a>
                     <a href="">Brands</a>
                     <a href="">Featured</a>
