--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 
                 </div>
 
-                <a href="">Deals</a>
+                <a href="/deals.html">Deals</a>
                 <a href="">Support & Services</a>
                 <a href="">Brands</a>
                 <a href="">Featured</a>
