--- a/Signin.html
+++ b/Signin.html
@@ -25,7 +25,7 @@
                                 alt="Logo"></a>
 
                     </div>
-                    <a href="">Deals</a>
+                    <a href="/deals.html">Deals</a>
                     <a href="">Support & Services</a>
                     <a href="">Brands</a>
                     <a href="">Featured</a>
